# EA-ADPCM-Codec

./: .gitignore  CMakeLists.txt  EA_ADPCM_codec.cbp  README.md
EA ADPCM codec/: EA_ADPCM_DLL.h
EA-ADPCM-codec/: EA ADPCM codec.h  EA ADPCM codec.vcxproj  EA ADPCM codec.vcxproj.filters  EA-ADPCM-codec.cpp  EA_ADPCM_DLL.h  legacy.txt  vector_SIMD.h
exe/: exe.cpp  exe.vcxproj  exe.vcxproj.filters
